force-app/main/default/objects/Team_Members__c/Team_Members__c.object-meta.xml
<CustomObject>
    <label>Team Members</label>
    <nameField>
        <displayFormat>TM_{0000}</displayFormat>
        <label>Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>