force-app/main/default/objects/Team_Members__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <label>Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Level</fullName>
            </value>
            <value>
                <fullName>Second Level</fullName>
            </value>
            <value>
                <fullName>Third Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>