force-app/main/default/objects/Team_Members__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>User__r.IsActive</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>