force-app/main/default/objects/Team_Members__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>