force-app/main/default/objects/Team_Members__c/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Active</label>
    <type>Checkbox</type>
</CustomField>