force-app/main/default/objects/Team_Members__c/validationRules/Approver_Type_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Type_is_Mandatory</fullName>
    <active>true</active>
    <description>Approver Type is mandatory when Team is Cancelation Approval team</description>
    <errorConditionFormula>IF(TEXT(Team__r.Team_Type__c)  == &apos;Cancellation Approval Team&apos;, 
  ISBLANK(TEXT(Approver_Type__c)),
		FALSE)</errorConditionFormula>
    <errorMessage>When Team is &apos;Cancellation Approval Team&apos;, Approver Type is Mandatory</errorMessage>
</ValidationRule>